--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <canvas id="canvas"></canvas>
+        <canvas id="canvas" width="500px" height="500px"></canvas>
     </div>
     <script src="script.js"></script>
 </body>
