--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snake Game</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="https://kit.fontawesome.com/266c898db6.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <div id="theme">
+        <i class="fas fa-toggle-off fa-lg"></i>
+    </div>
     <div class="container">
         <canvas id="canvas" width="500px" height="500px"></canvas>
     </div>
