--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="theme">
-        <i class="fas fa-toggle-off fa-lg"></i>
+        <i id="toggle" class="fas fa-toggle-off fa-lg"></i>
     </div>
     <div class="container">
         <canvas id="canvas" width="500px" height="500px"></canvas>
