--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snake Game</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="https://kit.fontawesome.com/266c898db6.js" crossorigin="anonymous"></script>
+    <script defer src="https://kit.fontawesome.com/266c898db6.js" crossorigin="anonymous"></script>
+    <script defer src="script.js"></script>
 </head>
 <body>
     <div id="theme">
@@ -14,6 +15,5 @@
     <div class="container">
         <canvas id="canvas" width="500px" height="500px"></canvas>
     </div>
-    <script src="script.js"></script>
 </body>
 </html>
