added CSS BEM naming convention

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <script defer src="script.js"></script>
 </head>
 <body>
-    <div id="theme">
-        <i id="toggle" class="fas fa-toggle-off fa-lg"></i>
+    <div class="theme-toggle">
+        <div class="theme-toggle__icon fas fa-toggle-off fa-lg"></div>
     </div>
-    <div class="container">
-        <canvas id="canvas" width="500px" height="500px"></canvas>
+    <div class="snake-game">
+        <canvas class="snake-game__display" width="500px" height="500px"></canvas>
     </div>
 </body>
 </html>
