removed font awesome classes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="theme-toggle">
-        <div class="theme-toggle__icon fas fa-toggle-off fa-lg"></div>
+        <div class="theme-toggle__icon"></div>
     </div>
     <div class="snake-game">
         <canvas class="snake-game__display" width="500px" height="500px"></canvas>
