changed script type to module

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Snake Game</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script defer src="https://kit.fontawesome.com/266c898db6.js" crossorigin="anonymous"></script>
-    <script defer src="script.js"></script>
+    <script defer type="module" src="script.js"></script>
 </head>
 <body>
     <div class="theme-toggle">
