--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snake Game</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
     <script defer src="https://kit.fontawesome.com/266c898db6.js" crossorigin="anonymous"></script>
-    <script defer type="module" src="script.js"></script>
+    <script defer type="module" src="./modules/script.js"></script>
 </head>
 <body>
     <div class="theme-toggle">
