fixed bug that was preventing font from loading in time for render method

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <title>Snake Game</title>
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     <script defer src="https://kit.fontawesome.com/266c898db6.js" crossorigin="anonymous"></script>
-    <script defer type="module" src="./modules/script.js"></script>
+    <script type="module" src="./modules/script.js"></script>
     
 </head>
 <body>
