--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snake Game</title>
+    <link rel="preload" href="./css/fonts/pressstart2p-regular-webfont.woff" as="font">
+    <link rel="preload" href="./css/fonts/pressstart2p-regular-webfont.woff2" as="font">
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     <script defer src="https://kit.fontawesome.com/266c898db6.js" crossorigin="anonymous"></script>
     <script type="module" src="./modules/script.js"></script>
