--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
     </div>
     <div class="snake-game">
         <canvas class="snake-game__display" width="500px" height="500px"></canvas>
+        <div class="snake-game__scoreboard">
+            High Scores: 
+            <ul class="snake-game__scores">
+                <li class="snake-game__scores snake-game__scores--first">30 pts</li>
+                <li class="snake-game__scores snake-game__scores--second">20 pts</li>
+                <li class="snake-game__scores snake-game__scores--third">10 pts</li>
+            </ul>
+        </div>
     </div>
 </body>
 </html>
