updated scoreboard styles

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="snake-game">
         <canvas class="snake-game__display" width="500px" height="500px"></canvas>
         <div class="snake-game__scoreboard">
-            High Scores: 
+            <h2>High Scores: </h2>
             <ul class="snake-game__scores">
                 <li class="snake-game__scores snake-game__scores--first">30 pts</li>
                 <li class="snake-game__scores snake-game__scores--second">20 pts</li>
