updated class names

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     
 </head>
 <body>
-    <header>
-        <h1 class="title">Snek Game</h1>
-        <div class="longboi"></div>
+    <header class="title">
+        <h1 class="title__text">Snek Game</h1>
+        <div class="title__underline"></div>
     </header>
     <main> 
         <div class="theme-toggle">
